# dmsc-visualizer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
docs/: doxyconfig
examples/: CMakeLists.txt  custom_animation.cpp  freeze_tag.cpp  imgui.cpp  instances.cpp  main_window.cpp  simulation.cpp  solver.cpp
gui/: CMakeLists.txt  dialog_add_edges.h  dialog_add_edges.ui  glm_include.h  main_window.cpp  main_window.h  opengl_primitives.cpp  opengl_primitives.h  opengl_toolkit.cpp  opengl_toolkit.h  opengl_widget.cpp
gui/shaders/: basic.frag
include/dmsc/: animation.hpp  edge.h  edge.hpp  glm_include.hpp  gui.hpp  instance.h  instance.hpp  satellite.h  satellite.hpp  solution_types.hpp  solver.hpp  timeline.h  timeline.hpp  timetable.h  visuals.hpp
include/dmsc/solver/: greedy_next.hpp  greedy_next_khop.hpp
include/glad/: glad.h
include/vdmsc/: edge.h  gui.h  instance.h  orbit.h  satellite.h  timetable.h
instance/: orbit.h  problem_instance.cpp  problem_instance.h  timetable.h
resources/instances/: galileo.csv  iridium_next.csv  oneweb.csv
resources/shader/: basic.frag  basic.vert  earth.frag  earth.vert  satellite.vert  shaded.frag
solver/: greedy_next.h  iterated_local_search.cpp  scan_cover.h
src/: animation.cpp  edge.cpp  gui.cpp  instance.cpp  opengl_primitives.cpp  opengl_primitives.hpp  opengl_toolkit.cpp  opengl_toolkit.hpp  opengl_widgets.cpp  opengl_widgets.hpp  satellite.cpp  scan_cover.hpp  solver.cpp  timetable.cpp  visuals.cpp
src/glad/: glad.c
src/gui/: CMakeLists.txt  dialog_add_edges.cpp  dialog_add_edges.h  dialog_add_edges.ui  dialog_instance.cpp  dialog_instance.h  dialog_instance.ui  main_window.cpp  main_window.h  main_window.ui  opengl_primitives.cpp  opengl_primitives.h  opengl_toolkit.cpp  opengl_toolkit.h  opengl_widget.cpp  opengl_widget.h
src/instance/: CMakeLists.txt  edge.h  orbit.h  vector3d.cpp  vector3d.h
src/solver/: CMakeLists.txt  greedy_next.cpp  greedy_next.h  greedy_next_khop.cpp  iterated_local_search.cpp  iterated_local_search.h  scan_cover.h  simulated_annealing.cpp  simulated_annealing.h  solver.cpp  solver.h
